# AquetiCameraRecord

./: .gitignore  CMakeLists.txt  CutH264Stream.cpp  FindSyncFrames.cpp  GetFrame.cpp  Makefile  README.md  bash_run.sh  cut_h264_stream.sh  decode.sh  getFrame.cpp  process_raw_stream.sh  startAcos.pl  sync.cfg
bak/: getFrame.cpp
mantis/: MantisAPI.h
mantis/atl/: AtlPropertyTypes.h  AtlTypes.h  CompressionParameters.h
